# open-terminal-k8s-proxy

./: .dockerignore  .gitignore  .helmignore  .pre-commit-config.yaml  AGENTS.md  Chart.yaml  Dockerfile  Makefile  README.md  coverage.xml  pyproject.toml  values.yaml
.github/workflows/: ci.yml  docker.yml  release.yml
templates/: _helpers.tpl  deployment.yaml  pdb.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
terminal_proxy/: __init__.py  circuit_breaker.py  config.py  logging_config.py  main.py  metrics.py  models.py  pod_manager.py  storage.py
terminal_proxy/k8s/: __init__.py  client.py  pod_builder.py
terminal_proxy/proxy/: __init__.py  http.py  websocket.py
tests/: __init__.py  conftest.py  test_config.py  test_k8s_client.py  test_main.py  test_models.py  test_pod_manager.py  test_storage.py
